--- a/GameOfLifeClean/Views/Home/Index.cshtml
+++ b/GameOfLifeClean/Views/Home/Index.cshtml
@@ -9,8 +9,44 @@
 
     <head>
         <title>Game of Life</title>
-    </head>
-    <script type="text/javascript" src="~/js/site.js"></script>
+        <script type="text/javascript" src="~/js/site.js">
+        //GameManager.Instance.Initialize(); to start the game
+        function startGame() {
+            $.ajax({
+            type: "POST",
+            url: 'GameManager.cs/GameManager.Instance.Initialize',
+            data: "";
+            contentType: "application/json; charset=utf-8",
+            dataType: "json",
+            success: function (msg){
+                $("#divResult").html("success");
+            },
+            error: function(e){
+                $("#divResult").html("Something bad happened.");
+            }
+
+            });
+        }
+
+        //need to write csharp stop code
+        function stopGame() {
+            $.ajax({
+            type: "POST",
+            url: 'GameManager.cs/GameManager.Instance.StopTime',
+            data: "";
+            contentType: "application/json; charset=utf-8",
+            dataType: "json",
+            success: function (msg){
+                $("#divResult").html("success");
+            },
+            error: function(e){
+                $("#divResult").html("Something bad happened.");
+            }
+
+            });
+        }
+        </script>
+    </head>    
 
     <body onload="drawGrid();">
         <canvas id="gameOfLife" width='600px' height='600px' style='border:1px solid #000000;'>
