Fixed all errors

--- a/GameOfLifeClean/Views/Home/Index.cshtml
+++ b/GameOfLifeClean/Views/Home/Index.cshtml
@@ -27,4 +27,5 @@
     <Button id="Stop" OnClick="Stop()" text="Stop">Stop</Button>
 
     <script type="text/javascript" src="~/js/site.js"></script>
+    <script type="text/javascript" src="~/js/webSocketManager.js"></script>
 </div>
